[package]
name = "acmi-rescue"
version = "0.1.0"
edition = "2021"

# Profiling!
[profile.dev]
opt-level = 2

[profile.release]
debug = true

[dependencies]
atty = "0.2.0"
anyhow = { version = "1.0", features = ["backtrace"] }
camino = "1.0"
clap = { version = "3.0", features = ["derive"] }
flate2 = "1.0"
log = "0.4"
memmap = "0.7"
simplelog = "0.12"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
