[package]
name = "acmi-rescue"
version = "0.1.0"
edition = "2021"
authors = ["Matt Kline <matt@bitbashing.io>"]
license = "zlib"

[dependencies]
atty = "0.2.0"
anyhow = { version = "1.0", features = ["backtrace"] }
camino = "1.1"
clap = { version = "4.0", features = ["derive"] }
flate2 = "1.0"
log = "0.4"
memmap = "0.7"
simplelog = "0.12"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
